--- a/components/listing-card/style.module.css
+++ b/components/listing-card/style.module.css
@@ -12,5 +12,20 @@
 }
 
 .defaultImage {
-	filter: grayscale(80%) blur(5px);
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+.defaultImage::before {
+	background: rgba(0, 0, 0, 0.5);
+	border-radius: 1em;
+	content: 'No image';
+	display: block;
+	padding: 0.5em;
+	z-index: 1;
+}
+
+.defaultImage img {
+	filter: blur(5px);
 }
